tests/sem/pass/struct_return.c
struct sdfew {
	int b;
	char sdfe;
};

struct sdfew getname() {
	struct sdfew fed;
	return fed;
}

int main() {
	return getname().b;
}