tests/sem/error/condition_2.c
int main() {
	if (true) {
		return 666;
	}
	return 666;
}
